@@ -49,7 +49,7 @@
 		</select>&nbsp;&nbsp;
 	      </td>
 	      <td colspan=3>
-		Require IATA code? <input type="checkbox" name="iatafilter" value="yes" checked>
+		Show only major (IATA) airports? <input type="checkbox" name="iatafilter" value="yes" checked>
 	      </td>
 	    </tr>
 	</table>
